# ahti-agent

./: .env.example  README.md  docker-compose.yml  项目计划书.md
agent_control_py/: Dockerfile  config.py  main.py  pyproject.toml  verify_env.py
agent_control_py/core/: asr.py  models.py  ocr.py  rag_engine.py
agent_control_py/graphs/nutrition/: nodes.py  state.py  workflow.py
agent_control_py/graphs/rag/: nodes.py  state.py  workflow.py
agent_control_py/graphs/todo/: __init__.py  nodes.py  state.py  workflow.py
agent_control_py/graphs/travel/: nodes.py  state.py  workflow.py
agent_control_py/services/: go_woker_client.py  polish_service.py  test_crawl.py
agent_control_py/test/: test_integration.py  test_nutrition.py
frontend/: .env.example  App.tsx  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/components/pages/: FoodAnalysisPage.tsx  LoginPage.tsx  NotePage.tsx  PersonalCenterPage.tsx  PhotoHomePage.tsx  TodoPage.tsx  TravelPlanningPage.tsx
frontend/components/ui/: MarkdownRenderer.tsx
frontend/config/: config.ts
frontend/hooks/: index.ts  useAuth.ts  useNutrition.ts  useTravel.ts
frontend/services/: api.ts  authService.ts  index.ts  noteService.ts  nutritionService.ts  todoService.ts  travelService.ts
frontend/types/: index.ts
frontend/utils/: constants.ts  helpers.ts  index.ts
worker_service_go/: Dockerfile
worker_service_go/cmd/: main.go  main1.go
worker_service_go/migrations/: add_updated_at_to_sessions.sql
(+57 files in other folders)
